# sc2-replay-tools

./: .editorconfig  .gitattributes  .gitignore  README.md  azure.yaml  sc2replay-tools.code-workspace
.devcontainer/: devcontainer.json  postCreateCommand.sh
bicep/: bicepconfig.json  main.bicep
bicep/modules/: clientContainerApp.bicep  pythonProcessorContainerApp.bicep  storageContainers.bicep
infra/: main.bicep  main.parameters.json
infra/modules/: clientContainerApp.bicep  pythonProcessorContainerApp.bicep  storageContainers.bicep
reader/: .gitignore  README.md  pyproject.toml
reader/src/: read.py
replay-processor/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
replay-processor/replay_processor/: read.py
replay-processor/replay_processor/plugins/: game_plugin.py
scripts/: common.psm1  deploy.ps1  what-if.sh
viewer/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
viewer/app/: constants.ts  helpers.ts  models.ts  root.tsx  utilities.ts
viewer/app/buildOrders/: bad.ts  combined.ts  good.ts
viewer/app/components/: buildOrder.tsx  building.tsx  unit.tsx
viewer/app/routes/: index.tsx
viewer/app/services/: azureblob.server.ts
viewer/app/styles/: index.css  root.css
